--- a/app/src/main/res/layout/frag_my_layout.xml
+++ b/app/src/main/res/layout/frag_my_layout.xml
@@ -1,10 +1,86 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-<TextView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="我的页面"
-    />
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="220dp"
+        android:background="@drawable/my_bg">
+
+        <ImageView
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_alignParentLeft="true"
+            android:layout_marginLeft="24dp"
+            android:layout_marginTop="30dp"
+            android:src="@drawable/my_icon_remind_default" />
+
+        <ImageView
+            android:id="@+id/my_pic"
+            android:layout_width="72dp"
+            android:layout_height="72dp"
+            android:layout_marginTop="60dp"
+            android:layout_centerHorizontal="true"
+            android:src="@drawable/my_pic"
+            />
+        <TextView
+            android:id="@+id/my_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/my_pic"
+            android:text="冬天来了"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="10dp"
+            android:textSize="14sp"
+            android:textColor="#ffffff"
+            />
+        <Button
+            android:id="@+id/my_sign"
+            android:layout_width="66dp"
+            android:layout_height="28dp"
+            android:text="签到"
+            android:layout_below="@+id/my_name"
+            android:textSize="14sp"
+            android:textColor="#ffffff"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="12dp"
+            android:background="@drawable/bg_sign"
+            />
+    </RelativeLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginLeft="24dp"
+        android:layout_marginRight="24dp"
+        android:orientation="vertical"
+        >
+         <RelativeLayout
+             android:layout_width="match_parent"
+             android:layout_height="86dp"
+             android:orientation="vertical"
+             android:layout_marginTop="10dp"
+             android:background="@drawable/my_shap"
+             >
+             <ImageView
+                 android:id="@+id/img_my_message"
+                 android:layout_width="24dp"
+                 android:layout_height="24dp"
+                 android:src="@drawable/my_icon_messiage_default"
+                 android:layout_centerVertical="true"
+                 android:layout_marginLeft="30dp"
+                 />
+             <TextView
+                 android:id="@+id/tv_my_massage"
+                 android:layout_width="wrap_content"
+                 android:layout_height="wrap_content"
+                 android:text="我的信息"
+                 android:layout_below="@+id/img_my_message"
+                 android:layout_marginTop="10dp"
+
+                 />
+             
+         </RelativeLayout>
+    </LinearLayout>
 </LinearLayout>
