--- a/app/src/main/res/drawable/film_edx.xml
+++ b/app/src/main/res/drawable/film_edx.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="<a target=_blank href="
+<shape xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="<a target=_blank href="
     xmlns:http="http://schemas.android.com/aapt"
-    xmlns:android1="http://schemas.android.com/apk/res/android">
+    xmlns:android1="http://schemas.android.com/apk/res/android"
+    tools:ignore="NamespaceTypo">
     <!-- 渐变 -->
 <gradient
 
