--- a/app/src/main/res/layout/fragment_move_show.xml
+++ b/app/src/main/res/layout/fragment_move_show.xml
@@ -3,7 +3,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.weiducinema.fragment.Move_show">
-
     <ImageView
         android:id="@+id/im_ding"
         android:layout_marginTop="30dp"
@@ -34,107 +33,48 @@
         android:textSize="20sp"
         android:layout_weight="0.0"
         ></SearchView>
-    <ScrollView
-        android:layout_marginTop="85dp"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <LinearLayout
-            android:orientation="vertical"
+        android:orientation="vertical"
+        android:layout_below="@id/im_ding"
+        android:layout_height="match_parent">
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <recycler.coverflow.RecyclerCoverFlow
-                android:id="@+id/rcf_cinema_flow"
-                android:background="@drawable/pupol"
-                android:layout_marginLeft="24dp"
-                android:layout_width="312dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:layout_marginLeft="24dp"
+            android:layout_marginRight="24dp"
+            >
+            <Button
+                android:text="热门电影"
+                android:layout_centerVertical="true"
+                android:layout_alignParentLeft="true"
+                android:padding="1dp"
+                android:textSize="14sp"
+                android:layout_width="83dp"
+                android:layout_height="25dp" />
+            <Button
+                android:text="正在热映"
+                android:layout_centerVertical="true"
+                android:padding="1dp"
                 android:layout_centerHorizontal="true"
-                android:layout_height="300dp"></recycler.coverflow.RecyclerCoverFlow>
-            <RelativeLayout
-                android:layout_marginTop="20dp"
-                android:id="@+id/remen"
-                android:layout_marginLeft="24dp"
-                android:layout_below="@id/rcf_cinema_flow"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <TextView
-                    android:text="热门电影"
-                    android:textSize="16sp"
-                    android:layout_alignParentLeft="true"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    />
-                <ImageView
-                    android:src="@drawable/com_icon_next_default_"
-                    android:layout_alignParentRight="true"
-                    android:layout_width="24dp"
-                    android:layout_marginRight="24dp"
-                    android:layout_height="24dp" />
-            </RelativeLayout>
-            <android.support.v7.widget.RecyclerView
-                android:layout_marginTop="20dp"
-                android:id="@+id/recy1"
-                android:layout_below="@id/remen"
-                android:layout_marginLeft="24dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
-            <RelativeLayout
-                android:layout_marginTop="20dp"
-                android:id="@+id/zhengzai"
-                android:layout_marginLeft="24dp"
-                android:layout_below="@id/recy1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <TextView
-                    android:text="正在热映"
-                    android:textSize="16sp"
-                    android:layout_alignParentLeft="true"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    />
-                <ImageView
-                    android:src="@drawable/com_icon_next_default_"
-                    android:layout_alignParentRight="true"
-                    android:layout_width="24dp"
-                    android:layout_marginRight="24dp"
-                    android:layout_height="24dp" />
-            </RelativeLayout>
-            <android.support.v7.widget.RecyclerView
-                android:layout_marginTop="20dp"
-                android:id="@+id/recy2"
-                android:layout_below="@id/remen"
-                android:layout_marginLeft="24dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
-            <RelativeLayout
-                android:layout_marginTop="20dp"
-                android:id="@+id/jijiang"
-                android:layout_marginLeft="24dp"
-                android:layout_below="@id/recy2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <TextView
-                    android:text="即将上映"
-                    android:textSize="16sp"
-                    android:layout_alignParentLeft="true"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    />
-                <ImageView
-                    android:src="@drawable/com_icon_next_default_"
-                    android:layout_alignParentRight="true"
-                    android:layout_width="24dp"
-                    android:layout_marginRight="24dp"
-                    android:layout_height="24dp" />
-            </RelativeLayout>
-            <android.support.v7.widget.RecyclerView
-                android:layout_marginTop="20dp"
-                android:id="@+id/recy3"
-                android:layout_below="@id/remen"
-                android:layout_marginLeft="24dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
-        </LinearLayout>
-
-    </ScrollView>
+                android:textSize="14sp"
+                android:layout_width="83dp"
+                android:layout_height="25dp" />
+            <Button
+                android:text="即将上映"
+                android:layout_centerVertical="true"
+                android:padding="1dp"
+                android:layout_alignParentRight="true"
+                android:textSize="14sp"
+                android:layout_width="83dp"
+                android:layout_height="25dp" />
+        </RelativeLayout>
+        <com.jcodecraeer.xrecyclerview.XRecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="9"
+            ></com.jcodecraeer.xrecyclerview.XRecyclerView>
+    </LinearLayout>
 
 </RelativeLayout>
