--- a/app/src/main/res/layout/activity_show_move.xml
+++ b/app/src/main/res/layout/activity_show_move.xml
@@ -100,5 +100,20 @@
             android:layout_weight="9"
             ></com.jcodecraeer.xrecyclerview.XRecyclerView>
     </LinearLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:layout_alignParentBottom="true"
+        >
+        <ImageView
+            android:id="@+id/fanhui"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+
+            android:src="@drawable/com_icon_my_default_"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="25dp"
+            />
+    </RelativeLayout>
 
 </RelativeLayout>
