--- a/app/src/main/res/layout/frag_cinema_layout.xml
+++ b/app/src/main/res/layout/frag_cinema_layout.xml
@@ -1,10 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <ImageView
+        android:id="@+id/im_ding"
+        android:layout_marginTop="30dp"
+        android:layout_marginLeft="24dp"
+
+        android:src="@drawable/cinema_detail_icon_location_default_"
+        android:layout_width="48dp"
+        android:layout_height="48dp" />
     <TextView
+        android:id="@+id/text1"
+        android:text="北京"
+        android:textSize="16sp"
+        android:layout_alignLeft="@id/im_ding"
+        android:layout_marginLeft="56dp"
+        android:layout_alignBottom="@id/im_ding"
+        android:layout_marginBottom="20dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <SearchView
+        android:id="@+id/cinema_search"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="我的影院"
-        />
-</LinearLayout>
+        android:layout_alignParentRight="true"
+        android:layout_margin="10dp"
+        android:paddingRight="10dp"
+        android:layout_gravity="center"
+        android:textSize="20sp"
+        android:layout_weight="0.0"
+        ></SearchView>
+    <RelativeLayout
+        android:id="@+id/re"
+        android:layout_marginTop="10dp"
+        android:layout_below="@id/im_ding"
+        android:layout_width="match_parent"
+        android:layout_height="30dp">
+        <Button
+            android:id="@+id/tui"
+            android:textSize="14sp"
+            android:padding="0dp"
+            android:text="推荐影院"
+            android:layout_width="83dp"
+            android:layout_height="25dp" />
+        <Button
+            android:id="@+id/fu"
+            android:textSize="14sp"
+            android:padding="0dp"
+            android:layout_alignParentRight="true"
+            android:text="附近影院"
+            android:layout_width="83dp"
+            android:layout_height="25dp" />
+    </RelativeLayout>
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recy_tui"
+        android:layout_below="@id/re"
+        android:layout_marginTop="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
+</RelativeLayout>
