--- a/app/src/main/res/layout/fragment_filmfragment.xml
+++ b/app/src/main/res/layout/fragment_filmfragment.xml
@@ -7,53 +7,65 @@
     >
 
     <!-- TODO: Update blank fragment layout -->
-    <ImageView
-        android:id="@+id/im_ding"
-        android:layout_marginTop="30dp"
-        android:layout_marginLeft="24dp"
 
-        android:src="@drawable/cinema_detail_icon_location_default_"
-        android:layout_width="48dp"
-        android:layout_height="48dp" />
-    <TextView
-        android:id="@+id/text1"
-        android:text="北京"
-        android:textSize="16sp"
-        android:layout_alignLeft="@id/im_ding"
-        android:layout_marginLeft="56dp"
-        android:layout_alignBottom="@id/im_ding"
-        android:layout_marginBottom="20dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-    <SearchView
-        android:id="@+id/cinema_search"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_margin="10dp"
-        android:paddingRight="10dp"
-        android:layout_gravity="center"
-        android:textSize="20sp"
-        android:layout_weight="0.0"
-        ></SearchView>
     <ScrollView
-        android:layout_marginTop="85dp"
+        android:layout_marginTop="30dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-            <recycler.coverflow.RecyclerCoverFlow
-                android:id="@+id/rcf_cinema_flow"
-                android:background="@drawable/pupol"
-                android:layout_marginLeft="24dp"
-                android:layout_width="312dp"
-                android:layout_centerHorizontal="true"
-                android:layout_height="300dp"></recycler.coverflow.RecyclerCoverFlow>
             <RelativeLayout
-                android:layout_marginTop="20dp"
+
+                android:background="@drawable/pupol"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <ImageView
+                    android:id="@+id/im_ding"
+                    android:layout_marginTop="30dp"
+                    android:layout_marginLeft="24dp"
+
+                    android:src="@drawable/com_icon_loc_white_default_"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp" />
+                <TextView
+                    android:id="@+id/text1"
+                    android:text="北京"
+                    android:textColor="#ffffff"
+                    android:textSize="16sp"
+                    android:layout_alignLeft="@id/im_ding"
+                    android:layout_marginLeft="56dp"
+                    android:layout_alignBottom="@id/im_ding"
+                    android:layout_marginBottom="20dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+                <SearchView
+                    android:id="@+id/cinema_search"
+                    android:layout_width="wrap_content"
+                    android:layout_height="24dp"
+                    android:layout_marginTop="30dp"
+                    android:layout_alignParentRight="true"
+
+                    android:background="#ffffff"
+                    android:paddingRight="10dp"
+                    android:layout_gravity="center"
+                    android:textSize="20sp"
+                    android:layout_weight="0.0"
+                    ></SearchView>
+                <recycler.coverflow.RecyclerCoverFlow
+                    android:id="@+id/rcf_cinema_flow"
+                    android:layout_below="@id/im_ding"
+                    android:layout_marginLeft="24dp"
+                    android:layout_width="312dp"
+                    android:layout_centerHorizontal="true"
+                    android:layout_height="200dp"></recycler.coverflow.RecyclerCoverFlow>
+            </RelativeLayout>
+
+
+            <RelativeLayout
+                android:layout_marginTop="30dp"
                 android:id="@+id/remen"
                 android:layout_marginLeft="24dp"
                 android:layout_below="@id/rcf_cinema_flow"
