--- a/app/src/main/res/layout/activity_region.xml
+++ b/app/src/main/res/layout/activity_region.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bitmap"
-    tools:context="com.example.weiducinema.activity.RegionActivity">
+    tools:context="com.example.weiducinema.activity.WDRegionActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
