--- a/app/src/main/res/layout/fragment_filmfragment.xml
+++ b/app/src/main/res/layout/fragment_filmfragment.xml
@@ -9,7 +9,6 @@
     <!-- TODO: Update blank fragment layout -->
 
     <ScrollView
-        android:layout_marginTop="30dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <LinearLayout
@@ -27,18 +26,18 @@
                     android:layout_marginLeft="24dp"
 
                     android:src="@drawable/com_icon_loc_white_default_"
-                    android:layout_width="48dp"
-                    android:layout_height="48dp" />
+                    android:layout_width="24dp"
+                    android:layout_height="24dp" />
                 <TextView
                     android:id="@+id/text1"
                     android:text="北京"
                     android:textColor="#ffffff"
                     android:textSize="16sp"
-                    android:layout_alignLeft="@id/im_ding"
-                    android:layout_marginLeft="56dp"
-                    android:layout_alignBottom="@id/im_ding"
+                    android:layout_toRightOf="@id/im_ding"
+                    android:layout_marginLeft="10dp"
                     android:layout_marginBottom="20dp"
                     android:layout_width="wrap_content"
+                    android:layout_marginTop="30dp"
                     android:layout_height="wrap_content" />
 
                 <SearchView
