--- a/app/src/main/res/layout/activity_studios.xml
+++ b/app/src/main/res/layout/activity_studios.xml
@@ -12,35 +12,38 @@
             android:id="@+id/im_ding"
             android:layout_marginTop="30dp"
             android:layout_marginLeft="24dp"
-
             android:src="@drawable/com_icon_loc_white_default_"
-            android:layout_width="48dp"
-            android:layout_height="48dp" />
+            android:layout_width="24dp"
+            android:layout_height="24dp" />
         <TextView
             android:id="@+id/text1"
             android:text="北京"
             android:textColor="#ffffff"
-            android:textSize="16sp"
+            android:textSize="14sp"
             android:layout_alignLeft="@id/im_ding"
-            android:layout_marginLeft="56dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="30dp"
             android:layout_alignBottom="@id/im_ding"
-            android:layout_marginBottom="20dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
-        <SearchView
-            android:id="@+id/cinema_search"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="250dp"
             android:layout_height="24dp"
             android:layout_marginTop="30dp"
+            android:gravity="right"
             android:layout_alignParentRight="true"
-
-            android:background="#ffffff"
-            android:paddingRight="10dp"
-            android:layout_gravity="center"
-            android:textSize="20sp"
-            android:layout_weight="0.0"
-            ></SearchView>
+            android:orientation="horizontal">
+            <SearchView
+                android:id="@+id/cinema_search"
+                android:layout_width="wrap_content"
+                android:layout_height="24dp"
+                android:background="@drawable/find_shape"
+                android:paddingRight="10dp"
+                android:layout_gravity="center"
+                android:textSize="20sp"
+                ></SearchView>
+        </LinearLayout>
         <recycler.coverflow.RecyclerCoverFlow
             android:id="@+id/rcf_cinema_flow"
             android:layout_below="@id/im_ding"
