--- a/app/src/main/res/layout/frag_cinema_layout.xml
+++ b/app/src/main/res/layout/frag_cinema_layout.xml
@@ -6,51 +6,61 @@
         android:id="@+id/im_ding"
         android:layout_marginTop="30dp"
         android:layout_marginLeft="24dp"
-
-        android:src="@drawable/cinema_detail_icon_location_default_"
-        android:layout_width="48dp"
-        android:layout_height="48dp" />
+        android:src="@drawable/cinema_detail_icon_location"
+        android:layout_width="24dp"
+        android:layout_height="24dp" />
     <TextView
         android:id="@+id/text1"
         android:text="北京"
-        android:textSize="16sp"
+        android:textSize="14sp"
         android:layout_alignLeft="@id/im_ding"
-        android:layout_marginLeft="56dp"
+        android:layout_marginLeft="30dp"
         android:layout_alignBottom="@id/im_ding"
-        android:layout_marginBottom="20dp"
+        android:layout_marginTop="30dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
-
-    <SearchView
-        android:id="@+id/cinema_search"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <LinearLayout
+        android:layout_width="250dp"
+        android:layout_height="24dp"
+        android:layout_marginTop="30dp"
+        android:gravity="right"
         android:layout_alignParentRight="true"
-        android:layout_margin="10dp"
-        android:paddingRight="10dp"
-        android:layout_gravity="center"
-        android:textSize="20sp"
-        android:layout_weight="0.0"
-        ></SearchView>
+        android:orientation="horizontal">
+        <SearchView
+            android:id="@+id/cinema_search"
+            android:layout_width="wrap_content"
+            android:layout_height="24dp"
+            android:background="@drawable/find_shape"
+            android:paddingRight="10dp"
+            android:layout_gravity="center"
+            android:textSize="20sp"
+            ></SearchView>
+    </LinearLayout>
     <RelativeLayout
         android:id="@+id/re"
         android:layout_marginTop="10dp"
         android:layout_below="@id/im_ding"
         android:layout_width="match_parent"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp"
         android:layout_height="30dp">
         <Button
             android:id="@+id/tui"
             android:textSize="14sp"
             android:padding="0dp"
             android:text="推荐影院"
+            android:layout_marginLeft="30dp"
+            android:background="@drawable/radio"
             android:layout_width="83dp"
             android:layout_height="25dp" />
         <Button
             android:id="@+id/fu"
             android:textSize="14sp"
             android:padding="0dp"
-            android:layout_alignParentRight="true"
+            android:layout_toRightOf="@+id/tui"
+            android:layout_marginLeft="30dp"
             android:text="附近影院"
+            android:background="@drawable/radio"
             android:layout_width="83dp"
             android:layout_height="25dp" />
     </RelativeLayout>
