--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -50,53 +50,49 @@
         android:layout_centerHorizontal="true"
         app:placeholderImage="@drawable/baobei"
         android:layout_height="360dp" />
-   <RadioGroup
-       android:id="@+id/groups"
-       android:layout_width="match_parent"
-       android:layout_marginLeft="24dp"
-       android:layout_marginRight="24dp"
-       android:layout_below="@id/movier_sim"
-       android:layout_marginTop="40dp"
-       android:orientation="horizontal"
-
-       android:layout_height="wrap_content">
-       <RadioButton
-           android:id="@+id/xiangqing"
-           android:text="详情"
-           android:button="@null"
-           android:gravity="center"
-           android:textColor="#ffffff"
-
-           android:layout_width="58dp"
-           android:layout_height="32dp" />
-       <RadioButton
-           android:id="@+id/yugao"
-           android:text="预告"
-           android:button="@null"
-           android:gravity="center"
-           android:textColor="#ffffff"
-
-           android:layout_width="58dp"
-           android:layout_height="32dp" />
-       <RadioButton
-           android:id="@+id/juzhao"
-           android:text="剧照"
-           android:button="@null"
-           android:gravity="center"
-           android:textColor="#ffffff"
-
-           android:layout_width="58dp"
-           android:layout_height="32dp" />
-       <RadioButton
-           android:id="@+id/yingping"
-           android:text="影评"
-           android:button="@null"
-           android:gravity="center"
-           android:textColor="#ffffff"
-
-           android:layout_width="58dp"
-           android:layout_height="32dp" />
-   </RadioGroup>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="32dp"
+        android:gravity="center"
+        android:layout_below="@id/movier_sim"
+        android:layout_marginTop="30dp"
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/details_txt_details"
+            android:layout_width="58dp"
+            android:layout_height="32dp"
+            android:text="详情"
+            android:textSize="14sp"
+            android:gravity="center"
+            android:textColor="#fff"/>
+        <TextView
+            android:id="@+id/details_txt_prediction"
+            android:layout_width="58dp"
+            android:layout_height="32dp"
+            android:text="预告"
+            android:textSize="14sp"
+            android:layout_marginLeft="30dp"
+            android:gravity="center"
+            android:textColor="#fff"/>
+        <TextView
+            android:id="@+id/details_txt_stills"
+            android:layout_width="58dp"
+            android:layout_height="32dp"
+            android:text="剧照"
+            android:textSize="14sp"
+            android:layout_marginLeft="30dp"
+            android:gravity="center"
+            android:textColor="#fff"/>
+        <TextView
+            android:id="@+id/details_txt_review"
+            android:layout_width="58dp"
+            android:layout_height="32dp"
+            android:text="影评"
+            android:layout_marginLeft="30dp"
+            android:textSize="14sp"
+            android:gravity="center"
+            android:textColor="#fff"/>
+    </LinearLayout>
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="100dp"
