--- a/app/src/main/res/layout/activity_my__message_.xml
+++ b/app/src/main/res/layout/activity_my__message_.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    xmlns:fresco="http://schemas.android.com/apk/res-auto">
+    xmlns:fresco="http://schemas.android.com/apk/res-auto"
     tools:context="com.example.weiducinema.activity.my.My_Message_Activity">
   <LinearLayout
         android:layout_width="match_parent"
@@ -77,7 +77,7 @@
             android:id="@+id/user_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="用户昵称"
+            android:text="游客用户"
             android:textSize="14sp"
             android:textColor="#333333"
             android:layout_alignParentRight="true"
@@ -109,7 +109,7 @@
             android:id="@+id/user_sex"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="用户昵称"
+            android:text="无"
             android:textSize="14sp"
             android:textColor="#333333"
             android:layout_alignParentRight="true"
@@ -143,7 +143,7 @@
             android:id="@+id/user_data"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="出生日期"
+            android:text="未设置"
             android:textSize="14sp"
             android:textColor="#333333"
             android:layout_alignParentRight="true"
@@ -176,7 +176,7 @@
             android:id="@+id/user_phone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="18335901165"
+            android:text="**********"
             android:textSize="14sp"
             android:textColor="#333333"
             android:layout_alignParentRight="true"
@@ -250,6 +250,7 @@
     </RelativeLayout>
   </LinearLayout>
     <ImageView
+        android:id="@+id/img_back"
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:src="@drawable/com_icon_my_default_"
