--- a/app/src/main/res/layout/pay_layout.xml
+++ b/app/src/main/res/layout/pay_layout.xml
@@ -10,10 +10,10 @@
         android:layout_height="wrap_content"
         android:textSize="16sp"
         android:textColor="#666666"/>
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src=""
-        />
+    <!--<ImageView-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:src=""-->
+        <!--/>-->
 
 </RelativeLayout>
