--- a/app/src/main/res/layout/activity_cinema_choose.xml
+++ b/app/src/main/res/layout/activity_cinema_choose.xml
@@ -23,8 +23,9 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="200dp"
-            android:src="@drawable/pupol"
-            />
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:src="@drawable/pupol" />
 
         <TextView
             android:id="@+id/txt_session"
