--- a/app/src/main/res/layout/activity_wdchange_password.xml
+++ b/app/src/main/res/layout/activity_wdchange_password.xml
@@ -19,22 +19,24 @@
             android:id="@+id/tv_older"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="14sp"
+            android:textSize="16sp"
             android:text="当前密码:"
             android:layout_marginLeft="20dp"
             android:textColor="#333333"
             android:layout_marginTop="20dp"
             />
-        <TextView
+        <EditText
             android:id="@+id/user_older_pwd"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="150dp"
+            android:layout_height="20dp"
             android:layout_marginRight="24dp"
             android:layout_alignParentRight="true"
             android:layout_marginTop="20dp"
-            android:text="18335***165"
-            android:textSize="14sp"
-            android:textColor="#333333"
+            android:textSize="16sp"
+            android:maxEms="12"
+            android:background="@null"
+            android:hint="请输入旧密码"
+           android:textColor="#333333"
             />
         <View
             android:id="@+id/view1"
@@ -51,23 +53,25 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/tv_older"
-            android:textSize="14sp"
+            android:textSize="16sp"
             android:text="重置密码为:"
             android:layout_marginLeft="20dp"
             android:textColor="#333333"
             android:layout_marginTop="20dp"
             />
-        <TextView
+        <EditText
             android:id="@+id/user_new_pwd"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="150dp"
+            android:layout_height="20dp"
             android:layout_below="@+id/user_older_pwd"
             android:layout_marginRight="24dp"
             android:layout_alignParentRight="true"
             android:layout_marginTop="20dp"
             android:inputType="textPassword"
-            android:text="18335***165"
-            android:textSize="14sp"
+            android:maxEms="12"
+            android:hint="请输入你的密码"
+            android:background="@null"
+            android:textSize="16sp"
             android:textColor="#333333"
             />
         <View
@@ -85,24 +89,26 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/tv_new"
-            android:textSize="14sp"
+            android:textSize="16sp"
             android:text="请再次输入密码:"
             android:layout_marginLeft="20dp"
             android:textColor="#333333"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"
             />
-        <TextView
+        <EditText
             android:id="@+id/user_agin_new_pwd"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="150dp"
+            android:layout_height="30dp"
             android:layout_below="@+id/user_new_pwd"
             android:layout_marginRight="24dp"
             android:layout_alignParentRight="true"
             android:layout_marginTop="20dp"
-            android:text="18335***165"
+            android:hint="请再次输入您的密码"
             android:inputType="textPassword"
-            android:textSize="14sp"
+            android:maxEms="12"
+            android:textSize="16sp"
+            android:background="@null"
             android:textColor="#333333"
             android:layout_marginBottom="20dp"
             />
