添加关注功能

--- a/app/src/main/res/layout/activity_cinema_details.xml
+++ b/app/src/main/res/layout/activity_cinema_details.xml
@@ -67,12 +67,43 @@
             android:layout_marginTop="85dp"
             android:layout_marginLeft="24dp"
             android:layout_marginRight="24dp"></recycler.coverflow.RecyclerCoverFlow>
+        <RelativeLayout
+
+            android:layout_below="@id/recy_carousel"
+            android:layout_width="match_parent"
+            android:layout_marginTop="20dp"
+            android:layout_height="wrap_content">
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="3dp"
+                android:layout_marginLeft="24dp"
+                android:layout_marginRight="24dp"
+                android:background="@drawable/shadow">
+
+            </RelativeLayout>
+
+            <TextView
+                android:id="@+id/movie_text_xian"
+                android:layout_width="match_parent"
+                android:layout_height="3dp"
+                android:layout_marginLeft="80dp"
+
+                android:layout_marginRight="80dp" />
+            <TextView
+                android:id="@+id/movie_text_dong"
+                android:layout_width="35dp"
+                android:layout_height="3dp"
+                android:layout_centerHorizontal="false"
+                android:layout_marginLeft="80dp"
+                android:background="@drawable/moviefragment_shu" />
+        </RelativeLayout>
+
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_time"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginLeft="24dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="30dp"
             android:layout_marginRight="24dp"></android.support.v7.widget.RecyclerView>
     </LinearLayout>
 
