--- a/app/src/main/res/layout/frag_my_layout.xml
+++ b/app/src/main/res/layout/frag_my_layout.xml
@@ -11,9 +11,9 @@
         android:background="@drawable/my_bg">
 
         <ImageView
+            android:id="@+id/systems_message"
             android:layout_width="24dp"
             android:layout_height="24dp"
-
             android:layout_alignParentLeft="true"
             android:layout_marginLeft="24dp"
             android:layout_marginTop="30dp"
