--- a/app/src/main/res/layout/frag_cinema_layout_adapter.xml
+++ b/app/src/main/res/layout/frag_cinema_layout_adapter.xml
@@ -3,45 +3,61 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <RelativeLayout
-        android:layout_centerHorizontal="true"
-        android:layout_width="312dp"
-        android:layout_height="90dp">
-        <com.facebook.drawee.view.SimpleDraweeView
-            android:id="@+id/sim"
-            android:layout_width="70dp"
-            android:layout_margin="10dp"
-            app:placeholderImage="@drawable/button_shape"
-            android:layout_height="70dp" />
-        <TextView
-            android:id="@+id/name"
-            android:layout_marginTop="10dp"
-            android:textSize="14sp"
-            android:text="哈哈哈哈"
-            android:layout_toRightOf="@id/sim"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-        <TextView
-            android:id="@+id/jie"
-            android:layout_marginTop="10dp"
-            android:layout_below="@id/name"
-            android:textSize="12sp"
-            android:text="哈哈哈哈"
-            android:maxLines="2"
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        >
+        <RelativeLayout
+            android:layout_centerHorizontal="true"
+            android:layout_width="312dp"
+            android:layout_height="90dp">
+            <com.facebook.drawee.view.SimpleDraweeView
+                android:id="@+id/sim"
+                android:layout_width="70dp"
+                android:layout_margin="10dp"
+                app:placeholderImage="@drawable/button_shape"
+                android:layout_height="70dp" />
+            <TextView
+                android:id="@+id/name"
+                android:layout_marginTop="10dp"
+                android:textSize="14sp"
+                android:text="哈哈哈哈"
+                android:layout_toRightOf="@id/sim"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:id="@+id/jie"
+                android:layout_marginTop="10dp"
+                android:layout_below="@id/name"
+                android:textSize="12sp"
+                android:text="哈哈哈哈"
+                android:maxLines="2"
 
-            android:layout_toRightOf="@id/sim"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-        <TextView
-            android:id="@+id/ju"
-            android:layout_marginTop="10dp"
-            android:textSize="12sp"
-            android:layout_alignParentBottom="true"
-            android:text="哈哈哈哈"
-            android:layout_marginBottom="10dp"
-            android:layout_toRightOf="@id/sim"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+                android:layout_toRightOf="@id/sim"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:id="@+id/ju"
+                android:layout_marginTop="10dp"
+                android:textSize="12sp"
+                android:layout_alignParentBottom="true"
+                android:text="哈哈哈哈"
+                android:layout_marginBottom="10dp"
+                android:layout_toRightOf="@id/sim"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+            <ImageView
+                android:id="@+id/guan"
+                android:layout_alignParentRight="true"
+                android:layout_marginTop="25dp"
+                android:layout_marginRight="10dp"
+                android:layout_width="24dp"
+                android:layout_alignParentBottom="true"
+                android:layout_marginBottom="5dp"
+                android:layout_height="24dp" />
+        </RelativeLayout>
 
-    </RelativeLayout>
+    </android.support.v7.widget.CardView>
+
 </RelativeLayout>
